Fixes content profile overlap on profile activity stream

--- a/status/_inc/css/status.css
+++ b/status/_inc/css/status.css
@@ -1913,7 +1913,7 @@ div#message-thread div.message-options {
 		-moz-box-shadow:none;
 	}
 	
-	.activity #content-profile{width:78%;float:left;}
+	.activity #content-profile{width:76%;float:left;}
 	
 	#content-stream{
 		float: left;
